tests/fixtures/positive/observability/UnstructuredErrorLog.kt
package test

interface Logger {
    fun error(message: String)
}

fun record(logger: Logger, e: Throwable) {
    logger.error("failure: $e")
}
